Tue Sep 23 17:05:14 2008  Koichi Sasada  <ko1@atdot.net>

	* class.c, vm_core.h: move decl of rb_iseq_clone() to class.c.

Tue Sep 23 17:02:47 2008  Tanaka Akira  <akr@fsij.org>

	* debug.h (ruby_set_debug_option): declared.

	* main.c: include debug.h.

	* common.mk (main.$(OBJEXT)): dependency updated.

Tue Sep 23 16:59:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (ENVMATCH, ENVNMATCH): reduced same code.

Tue Sep 23 16:55:11 2008  Koichi Sasada  <ko1@atdot.net>

	* ruby.h: fix comment and rename macro HAVE_RUBY_MVM_H to
	  HAVE_RUBY_VM_H.

Tue Sep 23 16:41:31 2008  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/node.h, vm_core.h: move definition of
	  RUBY_VM_METHOD_NODE to node.h.

	* class.c, common.mk: remove useless inclusion.

	* compile.h, iseq.h, vm_core.h: rename compile.h to iseq.h.
	  move some definitions from vm_core.h to iseq.h.

	* compile.c, iseq.c, vm.c: ditto.

	* eval.c, compile.c: move some functions for parser
	  from eval.c to compile.c.

	* eval_intern.h, vm_core.h: move va_init_list() macro to
	  vm_core.h.

	* iseq.c (rb_iseq_new_top, rb_iseq_first_lineno): added.

	* load.c, ruby.c: use rb_iseq_new_top() instead of
	  rb_iseq_new() with ISEQ_TYPE_TOP constant directly.

	* proc.c: use rb_iseq_first_lineno() instead of accessing
	  iseq structure.

Tue Sep 23 16:17:54 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/ripper/eventids2.c (token_to_eventid): supper __ENCODING__
	  keyword.  [ruby-dev:36478]

Tue Sep 23 15:30:53 2008  Koichi Sasada  <ko1@atdot.net>

	* common.mk, hash.c: remove unused inclusion.

Tue Sep 23 09:52:07 2008  Koichi Sasada  <ko1@atdot.net>

	* eval_safe.c, safe.c: rename eval_safe.c to safe.c.

	* common.mk, eval.c, safe.c, inits.c: separate safe.c from eval.c and
	  make Init_safe().

Tue Sep 23 09:20:00 2008  Koichi Sasada  <ko1@atdot.net>

	* common.mk: clean up
	  - remove blockinlining.$(OBJEXT) to built
	  - make ENCODING_H_INCLDUES variable (include/ruby/encoding.h)